[package]
name = "segurlink"
version = "1.0.0"
edition = "2024"
authors = ["itsgerliz"]
description = "Secure tunnel over TCP/IP, written in Rust"
readme = "README.md"
license-file = "LICENSE.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.6"
rustls = "0.23.23"